--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,7 +1,7 @@
 .footer {
     width: 100%;
     height: 200px;
-    background: #21325e;
+    background: #b4c4ec;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11,14 +11,14 @@
   }
   
   .socialMedia svg {
-    color: white;
+    color: rgb(232, 243, 243);
     margin: 20px;
     font-size: 70px;
     cursor: pointer;
   }
   
   .footer p {
-    color: white;
+    color: #b4c4ec;
   }
   
   @media only screen and (max-width: 600px) {
