--- a/src/styles/ProjectDisplay.css
+++ b/src/styles/ProjectDisplay.css
@@ -9,16 +9,17 @@
   
   .project h1 {
     margin-top: 50px;
-    color: #3e497a;
-    font-size: 35px;
+    color: #06155e;
+    font-size: 45px;
   }
   .project img {
-    width: 700px;
+    width: 800px;
     border-radius: 10px;
   }
   
   .project p {
-    font-size: 40px;
+    
+    font-size: 20px;
     color: #3e497a;
   }
   
